@@ -59,6 +59,7 @@
           <redirectTestOutputToFile>true</redirectTestOutputToFile>
           <argLine>--add-exports javafx.graphics/com.sun.javafx.application=ALL-UNNAMED</argLine>
           <argLine>--add-exports javafx.fxml</argLine>
+          <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
         </configuration>
       </plugin>
       <plugin>
